# numu

./: .numurc  CMakeLists.txt  numu.modules.cmake
include/numu/core/: ast.h
src/core/: ast.cpp  eval.cpp  lex.cpp  parse.cpp
